--- a/App/ClientApp/src/app/layout/tenantuser/list/list.component.html
+++ b/App/ClientApp/src/app/layout/tenantuser/list/list.component.html
@@ -1,7 +1,7 @@
 <div class="main-container position-relative">
   <div class="page-title d-flex justify-content-md-between justify-content-end">
     <div class="xs-title">
-      <span class="mr-2">Instant Tenant Users</span>
+      <span class="mr-2">Instance Tenant Users</span>
       <span class="icon-filter filter-btn" id="spnFilter" (click)="isFilter=!isFilter"></span>
     </div>
     <div>
