--- a/App/ClientApp/src/app/layout/widget-dynamic/list/list.component.html
+++ b/App/ClientApp/src/app/layout/widget-dynamic/list/list.component.html
@@ -27,7 +27,7 @@
           <table mat-table [dataSource]="dataSource" matSort class="table-cust" (matSortChange)="sortData($event)">
             <!-- Position Column -->
             <ng-container matColumnDef="WidgetName">
-              <th class="width15 ip-w-10" mat-header-cell *matHeaderCellDef mat-sort-header> Name </th>
+              <th class="width10 ip-w-10" mat-header-cell *matHeaderCellDef mat-sort-header> Name </th>
               <td mat-cell *matCellDef="let dynamicwidget" title="{{dynamicwidget.WidgetName}}">{{dynamicwidget.WidgetName}}</td>
             </ng-container>
             <ng-container matColumnDef="Product">
@@ -64,9 +64,10 @@
               </td>
             </ng-container>
             <ng-container matColumnDef="Status">
-              <th class="width5 ip-w-5" mat-header-cell *matHeaderCellDef mat-sort-header>Status </th>
+              <th class="width10 ip-w-5" mat-header-cell *matHeaderCellDef mat-sort-header>Status </th>
               <td mat-cell *matCellDef="let dynamicwidget">
                 <span class="badge badge-primary p-1" *ngIf="dynamicwidget.Status=='New'">{{dynamicwidget.Status}}</span>
+                <span class="badge badge-warning p-1 text-white" *ngIf="dynamicwidget.Status=='Ready To Publish'">{{dynamicwidget.Status}}</span>
                 <span class="badge badge-success p-1" *ngIf="dynamicwidget.Status=='Published'">{{dynamicwidget.Status}}</span>
               </td>
             </ng-container>
@@ -84,11 +85,11 @@
                   <button type="button" id="btnUpdateRole" title="Delete" *ngIf="(userClaimsRolePrivilegeOperations | filterAuthorisedRole:{EntityName:'Dynamic Widget',Operation: 'Delete' })" (click)="DeleteDynamicWidget(dynamicwidget)">
                     <span class="fa fa-trash"></span>
                   </button>
-                  <button type="button" title="Publish" id="btnPublish" *ngIf="dynamicwidget.Status!='Published' && ((userClaimsRolePrivilegeOperations | filterAuthorisedRole:{EntityName:'Dynamic Widget',Operation: 'Publish' }))" (click)="PublishDynamicWidget(dynamicwidget)"><span class="fa fa-share"></span></button>
+                  <button type="button" title="Publish" id="btnPublish" *ngIf="dynamicwidget.Status!='Published' && dynamicwidget.Status!='New' &&((userClaimsRolePrivilegeOperations | filterAuthorisedRole:{EntityName:'Dynamic Widget',Operation: 'Publish' }))" (click)="PublishDynamicWidget(dynamicwidget)"><span class="fa fa-share"></span></button>
                   <button type="button" title="Clone" id="btnClone" *ngIf="dynamicwidget.Status!='New' && ((userClaimsRolePrivilegeOperations | filterAuthorisedRole:{EntityName:'Dynamic Widget',Operation: 'Create' }))" (click)="CloneDynamicWidget(dynamicwidget)">
                     <span class="fa fa-clone"></span>
                   </button>
-                  <button type="button" title="Preview" id="btnPreview" *ngIf="((userClaimsRolePrivilegeOperations | filterAuthorisedRole:{EntityName:'Dynamic Widget',Operation: 'View' }))" (click)="PreviewDynamicWidget(dynamicwidget)">
+                  <button type="button" title="Preview" id="btnPreview" *ngIf="dynamicwidget.Status!='New' && ((userClaimsRolePrivilegeOperations | filterAuthorisedRole:{EntityName:'Dynamic Widget',Operation: 'View' }))" (click)="PreviewDynamicWidget(dynamicwidget)">
                     <span class="fa fa-eye"></span>
                   </button>
                 </div>
@@ -146,6 +147,7 @@
           <select class="form-control" formControlName="filterStatus">
             <option value="0" selected> Select</option>
             <option value="New">New</option>
+            <option value="Ready To Publish">Ready To Publish</option>
             <option value="Published">Published</option>
           </select>
         </div>
