remove domain name from tenant list filter screen

--- a/App/ClientApp/src/app/layout/tenants/list/list.component.html
+++ b/App/ClientApp/src/app/layout/tenants/list/list.component.html
@@ -87,10 +87,10 @@
           <label>Name</label>
           <input type="text" class="form-control" id="filterName" formControlName="filterName">
         </div>
-        <div class="form-group">
+        <!--<div class="form-group">
           <label>Domain Name</label>
           <input type="text" class="form-control" id="filterDomainName" formControlName="filterDomainName">
-        </div>
+        </div>-->
       </div>
 
       <!--[ngClass]="filterClass"-->
