--- a/App/ClientApp/src/app/layout/tenant-group-users/add-edit/add-edit.component.html
+++ b/App/ClientApp/src/app/layout/tenant-group-users/add-edit/add-edit.component.html
@@ -101,20 +101,20 @@
                 <div class="col-xl-5 col-lg-6 col-md-6 col-sm-6 form-group">
                   <div class="row">
                     <div class="col-5 col-md-5 col-sm-6 col-xs-5 p-rtl">
-                      <label for="inputCountryCode">Country Code</label><span class="text-danger ml-2">*</span>
+                      <label for="inputCountryCode">Country Code</label>
                       <select formControlName="CountryCode" (change)='onCountrySelected($event)' class="form-control">
                         <option *ngFor="let c of countrycodeLists" [value]="c.Identifier">{{c.Code}} {{c.DialingCode}}</option>
                       </select>
                       <div class="validation-msg" style="color:red">
-                        <ul *ngIf="tenantgroupuserFormErrorObject.showCountryCodeError" style="list-style-type:none">
+                        <!--<ul *ngIf="tenantgroupuserFormErrorObject.showCountryCodeError" style="list-style-type:none">
                           <li class="text-danger">
                             Please select country code
                           </li>
-                        </ul>
+                        </ul>-->
                       </div>
                     </div>
                     <div class="col-7 col-md-7 col-sm-6 col-xs-7 pl-1">
-                      <label for="inputMobileNumber">Mobile No.</label><span class="text-danger ml-2">*</span>
+                      <label for="inputMobileNumber">Mobile No.</label>
                       <input type="text" class="form-control" formControlName="mobileNumber" maxlength="10">
                       <div class="validation-msg" style="color:red" *ngIf="mobileNumber.touched && mobileNumber.errors">
                         <ul style="list-style-type:none">
@@ -127,9 +127,9 @@
                           <li class="text-danger" *ngIf="mobileNumber.errors?.pattern">
                             Invalid mobile number
                           </li>
-                          <li class="text-danger" *ngIf="mobileNumber.errors?.required">
+                          <!--<li class="text-danger" *ngIf="mobileNumber.errors?.required">
                             Mobile number required
-                          </li>
+                          </li>-->
                         </ul>
                       </div>
                     </div>
@@ -148,4 +148,3 @@
       </div>
     </form>
   </div>
-  
