--- a/App/ClientApp/src/app/layout/tenant-groups/add/add.component.html
+++ b/App/ClientApp/src/app/layout/tenant-groups/add/add.component.html
@@ -208,20 +208,20 @@
           <div class="col-sm-12 form-group">
             <div class="row">
               <div class="col-5 col-md-5 col-sm-6 col-xs-5 p-rtl">
-                <label for="inputCountryCode">Country Code</label><span class="text-danger ml-2">*</span>
+                <label for="inputCountryCode">Country Code</label>
                 <select formControlName="CountryCode" (change)='onCountrySelected($event)' class="form-control">
                   <option *ngFor="let country of countryList" [value]="country.Identifier">{{country.Code}}</option>
                 </select>
                 <div class="validation-msg" style="color:red">
-                  <ul *ngIf="tenantGroupUserFormErrorObject.showCountryCodeError" style="list-style-type:none">
+                  <!--<ul *ngIf="tenantGroupUserFormErrorObject.showCountryCodeError" style="list-style-type:none">
                     <li class="text-danger">
                       Please select country
                     </li>
-                  </ul>
+                  </ul>-->
                 </div>
               </div>
               <div class="col-7 col-md-7 col-sm-6 col-xs-7 pl-1">
-                <label for="inputMobileNumber">Mobile No.</label><span class="text-danger ml-2">*</span>
+                <label for="inputMobileNumber">Mobile No.</label>
                 <input type="text" class="form-control" formControlName="mobileNumber" maxlength="10">
                 <div class="validation-msg" style="color:red" *ngIf="mobileNumber.touched && mobileNumber.errors">
                   <ul style="list-style-type:none">
@@ -234,7 +234,7 @@
                     <li class="text-danger" *ngIf="mobileNumber.errors?.pattern">
                       Invalid mobile number
                     </li>
-                    <li class="text-danger" *ngIf="mobileNumber.errors?.required">
+                    <li class="text-danger">
                       Mobile number required
                     </li>
                   </ul>
@@ -333,7 +333,7 @@
           <div class="col-sm-12 form-group">
             <div class="row">
               <div class="col-5 col-md-5 col-sm-6 col-xs-5 p-rtl">
-                <label for="inputCountryCode">Country Code</label><span class="text-danger ml-2">*</span>
+                <label for="inputCountryCode">Country Code</label>
                 <select formControlName="EditCountryCode" (change)='onCountrySelected($event)' class="form-control">
                   <option *ngFor="let country of countryList" [value]="country.Identifier">{{country.Code}}</option>
                 </select>
@@ -347,7 +347,7 @@
 
               </div>
               <div class="col-7 col-md-7 col-sm-6 col-xs-7 pl-1">
-                <label for="inputMobileNumber">Mobile No.</label><span class="text-danger ml-2">*</span>
+                <label for="inputMobileNumber">Mobile No.</label>
                 <input type="text" class="form-control" formControlName="EditmobileNumber" maxlength="10">
                 <div class="validation-msg" style="color:red" *ngIf="EditmobileNumber.touched && EditmobileNumber.errors">
                   <ul style="list-style-type:none">
