--- a/App/ClientApp/src/app/layout/tenants/add/add.component.html
+++ b/App/ClientApp/src/app/layout/tenants/add/add.component.html
@@ -226,8 +226,8 @@
             <ng-container matColumnDef="ContactNumber">
               <th class="width18 ip-w-15" mat-header-cell *matHeaderCellDef mat-sort-header> Mobile No. </th>
               <td mat-cell *matCellDef="let contact">
-                <span *ngIf="contact.ContactNumber==null">-</span>
-                <span *ngIf="contact.ContactNumber!=null">{{contact.CountryCode}}-{{contact.ContactNumber}} </span>
+                <span *ngIf="contact.ContactNumber==null|| contact.ContactNumber=='' || contact.ContactNumber=='0'">-</span>
+                <span *ngIf="contact.ContactNumber!=null && contact.ContactNumber!='' && contact.ContactNumber!='0'">{{contact.CountryCode}}-{{contact.ContactNumber}} </span>
               </td>
             </ng-container>
             <ng-container matColumnDef="actions">
