--- a/App/ClientApp/src/app/layout/tenants/view/view.component.html
+++ b/App/ClientApp/src/app/layout/tenants/view/view.component.html
@@ -137,8 +137,8 @@
             <ng-container matColumnDef="no">
               <th class="width15" mat-header-cell *matHeaderCellDef mat-sort-header> Mobile No. </th>
               <td mat-cell *matCellDef="let contact">
-                <span *ngIf="contact.ContactNumber==null">-</span>
-                <span *ngIf="contact.ContactNumber!=null">{{contact.CountryCode}}-{{contact.ContactNumber}} </span>
+                <span *ngIf="contact.ContactNumber==null || contact.ContactNumber=='' || contact.ContactNumber=='0'">-</span>
+                <span *ngIf="contact.ContactNumber!=null && contact.ContactNumber!='' && contact.ContactNumber!='0'">{{contact.CountryCode}}-{{contact.ContactNumber}} </span>
               </td>
             </ng-container>
         
