--- a/App/ClientApp/src/app/layout/schedule-management/add/add.component.html
+++ b/App/ClientApp/src/app/layout/schedule-management/add/add.component.html
@@ -164,7 +164,7 @@
           <div class="col-md-4 col-lg-4 form-group">
             <label>{{ScheduleOccuranceMessage}}</label>
           </div>
-          <div class="col-md-8 col-lg-8 form-group" *ngIf='isMonthly'>
+          <div class="col-md-8 col-lg-8 form-group" *ngIf='isMonthly || isYearly'>
             <label class="text-warning">{{monthlyWarningMessage}}</label>
           </div>
         </div>
