--- a/App/ClientApp/src/app/layout/logs-details/logs-details.component.html
+++ b/App/ClientApp/src/app/layout/logs-details/logs-details.component.html
@@ -5,7 +5,7 @@
       <span class="icon-filter filter-btn" id="spnFilter" (click)="isFilter=!isFilter"></span>
     </div>
 
-    <div *ngIf='!isAllRecordSuccess'>
+    <div *ngIf='!isAllRecordSuccess && BatchStatus != "Approved"'>
       <button class="btn-add btn-cust" (click)="reTryAllLog()">
         <span class="fa fa-repeat btn-icon-cust btn-icon-fill"></span> Retry
       </button>
@@ -35,7 +35,7 @@
             <td mat-cell *matCellDef="let element">
               <div class="custom-control custom-checkbox">
                 <input class="custom-control-input" type="checkbox" [checked]="element.IsChecked" value="" (change)="IsCheckItem($event.target,element)">
-                <label class="custom-control-label">   {{element.CustomerName}}</label>
+                <label class="custom-control-label">{{element.CustomerName}}</label>
               </div>
             </td>
           </ng-container>
@@ -61,8 +61,8 @@
 
           <ng-container matColumnDef="date">
             <th class="width20" mat-header-cell *matHeaderCellDef mat-sort-header> Last Execution Date </th>
-            <!--<td mat-cell *matCellDef="let element">{{element.CreateDate  | date : "dd/MM/yyyy  h:mm a" }} </td>-->
-            <td mat-cell *matCellDef="let element"> <span>{{element.CreateDate  | date:DataFormat}}</span> {{element.CreateDate  | date:"h:mm a"}}</td>
+            <!--<td mat-cell *matCellDef="let element">{{element.CreateDate | date : "dd/MM/yyyy  h:mm a" }} </td>-->
+            <td mat-cell *matCellDef="let element"> <span>{{element.CreateDate | date:DataFormat}}</span> {{element.CreateDate | date:"h:mm a"}}</td>
 
           </ng-container>
 
@@ -72,7 +72,7 @@
               <div class="action-btns btn-tbl-action">
                 <button type="button" title="View" id="btnDelete" (click)="viewLodMessage(element)"><span class="fa fa-file-text-o"></span></button>
                 <!--<button type="button" title="Export" id="btnDelete"><span class="fa fa-download"></span></button>-->
-                <button type="button" title="Retry" id="btnUpdate" *ngIf="element.Status=='Failed'" (click)="reTryLog(element)"><span class="fa fa-repeat"></span></button>
+                <button type="button" title="Retry" id="btnUpdate" *ngIf="element.Status=='Failed' && BatchStatus != 'Approved'" (click)="reTryLog(element)"><span class="fa fa-repeat"></span></button>
               </div>
             </td>
           </ng-container>
