--- a/App/ClientApp/src/app/layout/schedule-management/view/view.component.html
+++ b/App/ClientApp/src/app/layout/schedule-management/view/view.component.html
@@ -90,48 +90,47 @@
       <div class="widget-area-grid padding-0">
         <table mat-table [dataSource]="dataSource" matSort class="table-cust" (matSortChange)="sortData($event)">
 
-          <!-- Position Column -->
           <ng-container matColumnDef="id">
             <th class="width5 ip-w-10" mat-header-cell *matHeaderCellDef mat-sort-header> Id </th>
             <td mat-cell *matCellDef="let element">{{element.Index}}</td>
           </ng-container>
-          <!-- Position Column -->
+
           <ng-container matColumnDef="BatchName">
-            <th class="width30 ip-w-15" mat-header-cell *matHeaderCellDef mat-sort-header> Batch Name </th>
-            <td mat-cell *matCellDef="let element">{{element.BatchName}}</td>
+            <th class="width20 ip-w-15" mat-header-cell *matHeaderCellDef mat-sort-header> Batch Name </th>
+            <td mat-cell *matCellDef="let element"><span title="{{element.BatchName}}">{{element.BatchName}}</span></td>
           </ng-container>
-          <!-- Name Column -->
+
           <ng-container matColumnDef="IsExecuted">
             <th class="width13 ip-w-15" mat-header-cell *matHeaderCellDef mat-sort-header> Is Executed </th>
             <td mat-cell *matCellDef="let element">
               <span *ngIf="element.IsExecuted">Yes</span>
               <span *ngIf="!element.IsExecuted">No</span>
-
             </td>
           </ng-container>
 
-          <!-- Weight Column -->
           <ng-container matColumnDef="IsDataReady">
             <th class="width12 ip-w-10" mat-header-cell *matHeaderCellDef mat-sort-header> Is Data Ready </th>
             <td mat-cell *matCellDef="let element">
               <span *ngIf="element.IsDataReady">Yes</span>
               <span *ngIf="!element.IsDataReady">No</span>
-
             </td>
           </ng-container>
 
-          <!-- Symbol Column -->
           <ng-container matColumnDef="DataExtractionDate">
             <th class="width15 ip-w-15" mat-header-cell *matHeaderCellDef mat-sort-header> Data Extraction Day </th>
-            <td mat-cell *matCellDef="let element"> {{element.DataExtractionDate   |  date:DataFormat}} </td>
+            <td mat-cell *matCellDef="let element"> {{element.DataExtractionDate | date:DataFormat}} </td>
           </ng-container>
 
-          <!-- Weight Column -->
           <ng-container matColumnDef="BatchExecutionDate">
             <th class="width15 ip-w-15" mat-header-cell *matHeaderCellDef mat-sort-header> Batch Execution Day </th>
-            <td mat-cell *matCellDef="let element"> {{element.BatchExecutionDate   |  date:DataFormat}}</td>
+            <td mat-cell *matCellDef="let element"> {{element.BatchExecutionDate | date:DataFormat}}</td>
           </ng-container>
-          
+
+          <ng-container matColumnDef="BatchStatus">
+            <th class="width10 ip-w-15" mat-header-cell *matHeaderCellDef mat-sort-header> Status </th>
+            <td mat-cell *matCellDef="let element"> {{element.Status}}</td>
+          </ng-container>
+
           <ng-container matColumnDef="Actions">
             <th class="width15 ip-w-15" mat-header-cell *matHeaderCellDef> Action</th>
             <td mat-cell *matCellDef="let element">
@@ -139,9 +138,14 @@
                 <button *ngIf="!element.IsExecuted && element.IsDataReady && element.Status=='New'" type="button" id="btnRunScheduleNow" title="Run Now" (click)="RunScheduleNow(element)">
                   <span class="fa fa-play text-success"></span>
                 </button>
-                <i class="fa fa-circle-o-notch fa-spin text-success" *ngIf="element.Status=='Running'" [title]="element.Status"></i>
-                <i class="fa fa-check text-success" aria-hidden="true" *ngIf="element.Status=='Completed'" [title]="element.Status"></i>
-                <i class="fa fa-exclamation-triangle text-danger" aria-hidden="true" *ngIf="element.Status=='Failed' || element.Status=='BatchDataNotAvailable'" [title]="element.Status"></i>
+                <i class="fa fa-circle-o-notch fa-spin" *ngIf="element.Status=='Running'" [title]="element.Status"></i>
+                <button type="button" id="btnApproveScheduleBatch" *ngIf="element.Status=='Completed' || element.Status=='Failed'" title="Approve" (click)="ApproveBatch(element)">
+                  <span class="fa fa-check"></span>
+                </button>
+                <button type="button" id="btnCleanScheduleBatch" *ngIf="element.Status=='Completed' || element.Status=='Failed' || element.Status=='BatchDataNotAvailable'" title="Clean" (click)="CleanBatch(element)">
+                  <span class="fa fa-trash-o"></span>
+                </button>
+                <span *ngIf="!element.IsExecuted && !element.IsDataReady && element.Status=='New'"> NA </span>
               </div>
             </td>
           </ng-container>
