--- a/App/ClientApp/src/app/layout/schedule-management/view/view.component.html
+++ b/App/ClientApp/src/app/layout/schedule-management/view/view.component.html
@@ -128,7 +128,7 @@
 
           <ng-container matColumnDef="BatchStatus">
             <th class="width10 ip-w-15" mat-header-cell *matHeaderCellDef mat-sort-header> Status </th>
-            <td mat-cell *matCellDef="let element"> {{element.Status}}</td>
+            <td mat-cell *matCellDef="let element"><span title="{{element.Status}}">{{element.Status}}</span> </td>
           </ng-container>
 
           <ng-container matColumnDef="Actions">
