--- a/App/ClientApp/src/app/layout/schedule-management/view/view.component.html
+++ b/App/ClientApp/src/app/layout/schedule-management/view/view.component.html
@@ -36,7 +36,7 @@
 
         <div class="col-md-4 col-lg-4 form-group">
           <label id="lblTemplate" for="inputRoleName">Time for the day (HH : MM) </label>
-          <div><span *ngIf="10>schedule.HourOfDay">0</span>{{schedule.HourOfDay}} : {{schedule.MinuteOfDay}}</div>
+          <div><span *ngIf="10>schedule.HourOfDay">0</span>{{schedule.HourOfDay}} : <span *ngIf="10>schedule.MinuteOfDay">0</span>{{schedule.MinuteOfDay}}</div>
         </div>
       </div>
 
@@ -56,7 +56,7 @@
 
       <div class="row">
         <div class="col-md-4 col-lg-4 form-group">
-          <label>Schedule will on</label>
+          <label>Schedule will run</label>
           <div>{{ScheduleOccuranceMessage}}</div>
         </div>
       </div>
