--- a/App/ClientApp/src/app/layout/tenants/add/add.component.html
+++ b/App/ClientApp/src/app/layout/tenants/add/add.component.html
@@ -76,6 +76,20 @@
                   </ul>
                 </div>
               </div>
+              <div class="col-xl-5 col-lg-6 col-md-6 col-sm-6 form-group">
+                <label>Start Date<span class="text-danger">*</span></label>
+                <div class="position-relative">
+                  <input [owlDateTime]="dt" class="form-control" id="inputSubscriptionDate" formControlName="tenantSubscriptionDate"
+                         placeholder="Please select subscription end date" readonly (ngModelChange)="onSubscriptionDateSelect($event)" [disabled]="updateOperationMode">
+                  <span [owlDateTimeTrigger]="dt" class="datetime-icon">
+                    <i class="fa fa-calendar"></i>
+                  </span>
+                  <owl-date-time #dt [pickerType]="'calendar'" [disabled]="updateOperationMode"></owl-date-time>
+                </div>
+                <div class="text-danger" *ngIf="filterSubscriptionDateError">
+                  {{filterSubscriptionDateErrorMessage}}
+                </div>
+              </div>
               <!-- <div class="col-xl-5 col-lg-6 col-md-6 col-sm-6 form-group">
                 <label>Domain Name</label><span class="text-danger ml-2">*</span>
                 <input type="text" class="form-control" id="inputDomainName" formControlName="tenantDomainName">
