--- a/App/ClientApp/src/app/layout/statement-search/statement-search.component.html
+++ b/App/ClientApp/src/app/layout/statement-search/statement-search.component.html
@@ -19,35 +19,40 @@
         <table mat-table [dataSource]="dataSource" matSort class="table-cust" (matSortChange)="sortData($event)">
 
           <ng-container matColumnDef="customer">
-            <th class="width20" mat-header-cell *matHeaderCellDef mat-sort-header> Customer </th>
-            <td mat-cell *matCellDef="let element"> {{element.CustomerName}} </td>
+            <th class="width18" mat-header-cell *matHeaderCellDef mat-sort-header> Customer </th>
+            <td mat-cell *matCellDef="let element"> <span title="{{element.CustomerName}}">{{element.CustomerName}}</span> </td>
+          </ng-container>
+
+          <ng-container matColumnDef="batchName">
+            <th class="width20" mat-header-cell *matHeaderCellDef mat-sort-header> Batch Name </th>
+            <td mat-cell *matCellDef="let element"> <span title="{{element.BatchName}}">{{element.BatchName}}</span> </td>
           </ng-container>
 
           <ng-container matColumnDef="accountId">
-            <th class="width15" mat-header-cell *matHeaderCellDef mat-sort-header> Account ID </th>
-            <td mat-cell *matCellDef="let element"> {{element.AccountNumber}} </td>
+            <th class="width13" mat-header-cell *matHeaderCellDef mat-sort-header> Account ID </th>
+            <td mat-cell *matCellDef="let element"> <span title="{{element.AccountNumber}}">{{element.AccountNumber}}</span> </td>
           </ng-container>
 
           <ng-container matColumnDef="accounttype">
-            <th class="width15" mat-header-cell *matHeaderCellDef mat-sort-header> Account Type </th>
-            <td mat-cell *matCellDef="let element">{{element.AccountType}}</td>
+            <th class="width13" mat-header-cell *matHeaderCellDef mat-sort-header> Account Type </th>
+            <td mat-cell *matCellDef="let element"> <span title="{{element.AccountType}}">{{element.AccountType}}</span> </td>
           </ng-container>
 
           <ng-container matColumnDef="date">
-            <th class="width15" mat-header-cell *matHeaderCellDef mat-sort-header> Statement Date </th>
-            <td mat-cell *matCellDef="let element"> {{element.StatementDate  | date:DataFormat}} </td>
+            <th class="width13" mat-header-cell *matHeaderCellDef mat-sort-header> Statement Date </th>
+            <td mat-cell *matCellDef="let element"> <span title="{{element.StatementDate | date:DataFormat}}">{{element.StatementDate | date:DataFormat}}</span> </td>
           </ng-container>
 
           <ng-container matColumnDef="period">
-            <th class="width20" mat-header-cell *matHeaderCellDef mat-sort-header> Statement Period </th>
-            <td mat-cell *matCellDef="let element"> {{element.StatementPeriod}} </td>
+            <th class="width12" mat-header-cell *matHeaderCellDef mat-sort-header> Statement Period </th>
+            <td mat-cell *matCellDef="let element"> <span title="{{element.StatementPeriod}}">{{element.StatementPeriod}}</span> </td>
           </ng-container>
 
           <ng-container matColumnDef="actions">
-            <th class="width15" mat-header-cell *matHeaderCellDef> Action </th>
+            <th class="width11" mat-header-cell *matHeaderCellDef> Action </th>
             <td mat-cell *matCellDef="let element">
               <div class="action-btns btn-tbl-action">
-                <button  (click)="ViewHTML(element)" type="button" title="View Html"><span class="fa fa-download"></span></button>
+                <button (click)="ViewHTML(element)" type="button" title="View Html"><span class="fa fa-download"></span></button>
                 <button (click)="ExportToPDF(element)" type="button" title="Export to PDF"><span class="fa fa-file-pdf-o"></span></button>
               </div>
             </td>
