--- a/App/ClientApp/src/app/layout/tenant-groups/view/view.component.html
+++ b/App/ClientApp/src/app/layout/tenant-groups/view/view.component.html
@@ -129,6 +129,20 @@
                 <span *ngIf="tenantgroupuser.TenantName!=null">{{tenantgroupuser.TenantName}} </span>
               </td>
             </ng-container>
+            <ng-container matColumnDef="LastModifiedName">
+              <th class="width20" mat-header-cell *matHeaderCellDef mat-sort-header>Last Modified By</th>
+              <td mat-cell *matCellDef="let tenantgroupuser">
+                <span *ngIf="tenantgroupuser.LastModifiedName==null">-</span>
+                <span *ngIf="tenantgroupuser.LastModifiedName!=null">{{tenantgroupuser.LastModifiedName}} </span>
+              </td>
+            </ng-container>
+            <ng-container matColumnDef="LastModifiedOn">
+              <th class="width20" mat-header-cell *matHeaderCellDef mat-sort-header> Last Modified On</th>
+              <td mat-cell *matCellDef="let tenantgroupuser">
+                <span *ngIf='tenantgroupuser.LastModifiedOn=="0001-01-01T00:00:00"'>-</span>
+                <span *ngIf='tenantgroupuser.LastModifiedOn!="0001-01-01T00:00:00"'>{{tenantgroupuser.LastModifiedOn | date:DataFormat}} </span>
+              </td>
+            </ng-container>
             <ng-container matColumnDef="SubscriptionEndDate">
               <th class="width20" mat-header-cell *matHeaderCellDef mat-sort-header> Subscription End Date </th>
               <td mat-cell *matCellDef="let tenantgroupuser">
@@ -160,12 +174,12 @@
   <form [formGroup]="tenantSubscriptionForm" name="tenantSubscriptionForm" autocomplete="on" novalidate>
     <div class="form-popup side-popup width340" [ngClass]="isTenantSubscriptionContainer? 'show' : 'hide'">
       <div class="filter-head">
-        <label class="m-0">Add Tenant Group User</label>
+        <label class="m-0">Add Subscription</label>
       </div>
       <div class="filter-body stylescrollbar">
         <div class="row">
           <div class="col-sm-12 form-group">
-            <label>Start Date<span class="text-danger">*</span></label>
+            <label>Subscription End Date<span class="text-danger">*</span></label>
             <div class="position-relative">
               <input [owlDateTime]="dt" class="form-control" id="inputSubscriptionDate" formControlName="tenantSubscriptionDate"
                      placeholder="Please select subscription end date" readonly (ngModelChange)="onSubscriptionDateSelect($event)">
