--- a/App/ClientApp/src/app/layout/tenants/add/add.component.html
+++ b/App/ClientApp/src/app/layout/tenants/add/add.component.html
@@ -77,7 +77,7 @@
                 </div>
               </div>
               <div class="col-xl-5 col-lg-6 col-md-6 col-sm-6 form-group">
-                <label>Start Date<span class="text-danger">*</span></label>
+                <label>Subscription End Date<span class="text-danger">*</span></label>
                 <div class="position-relative">
                   <input [owlDateTime]="dt" class="form-control" id="inputSubscriptionDate" formControlName="tenantSubscriptionDate"
                          placeholder="Please select subscription end date" readonly (ngModelChange)="onSubscriptionDateSelect($event)" [disabled]="updateOperationMode">
