--- a/App/ClientApp/src/app/layout/tenants/view/view.component.html
+++ b/App/ClientApp/src/app/layout/tenants/view/view.component.html
@@ -43,8 +43,11 @@
                 <div>{{tenant.TenantName}}</div>
               </div>
               <div class="col-xl-5 col-lg-6 col-md-6 col-sm-6 form-group">
-                <label>Domain Name</label>
-                <div>{{tenant.TenantDomainName}}</div>
+                <label>Subscription End Date</label>
+                <div>
+                  <span *ngIf='tenant.TenantSubscriptions[0].SubscriptionEndDate=="0001-01-01T00:00:00"'>-</span>
+                  <span *ngIf='tenant.TenantSubscriptions[0].SubscriptionEndDate!="0001-01-01T00:00:00"'>{{tenant.TenantSubscriptions[0].SubscriptionEndDate | date:DataFormat}} </span>
+                </div>
               </div>
             </div>
             <div class="row">
