--- a/App/ClientApp/src/app/layout/render-engine/list/list.component.html
+++ b/App/ClientApp/src/app/layout/render-engine/list/list.component.html
@@ -25,17 +25,17 @@
         <table mat-table [dataSource]="dataSource" matSort class="table-cust" (matSortChange)="sortData($event)">
           <!-- Position Column -->
           <ng-container matColumnDef="name">
-            <th class="width18 ip-w-40" mat-header-cell *matHeaderCellDef mat-sort-header> Name </th>
-            <td mat-cell *matCellDef="let re">{{re.RenderEngineName}}</td>
+            <th class="width20 ip-w-40" mat-header-cell *matHeaderCellDef mat-sort-header> Name </th>
+            <td mat-cell *matCellDef="let re"><span title="{{re.RenderEngineName}}">{{re.RenderEngineName}}</span></td>
           </ng-container>
   
           <ng-container matColumnDef="url">
-            <th class="width25 ip-w-40" mat-header-cell *matHeaderCellDef mat-sort-header> URL </th>
-            <td mat-cell *matCellDef="let re">{{re.URL}} </td>
+            <th class="width30 ip-w-40" mat-header-cell *matHeaderCellDef mat-sort-header> URL </th>
+            <td mat-cell *matCellDef="let re"><span title="{{re.URL}}">{{re.URL}}</span> </td>
           </ng-container>
 
           <ng-container matColumnDef="prioritylevel">
-            <th class="width13 ip-w-40" mat-header-cell *matHeaderCellDef mat-sort-header> Priority Level </th>
+            <th class="width12 ip-w-40" mat-header-cell *matHeaderCellDef mat-sort-header> Priority Level </th>
             <td mat-cell *matCellDef="let re">{{re.PriorityLevel}}</td>
           </ng-container>
 
@@ -45,7 +45,7 @@
           </ng-container>
   
           <ng-container matColumnDef="active">
-            <th class="width12 ip-w-5" mat-header-cell *matHeaderCellDef mat-sort-header> Active </th>
+            <th class="width10 ip-w-5" mat-header-cell *matHeaderCellDef mat-sort-header> Active </th>
             <td mat-cell *matCellDef="let re">
               <span *ngIf="re.IsActive">Yes</span>
               <span *ngIf="!re.IsActive">No</span>
@@ -53,7 +53,7 @@
           </ng-container>
   
           <ng-container matColumnDef="actions">
-            <th class="width18 ip-w-20" mat-header-cell *matHeaderCellDef> Actions </th>
+            <th class="width15 ip-w-20" mat-header-cell *matHeaderCellDef> Actions </th>
             <td mat-cell *matCellDef="let re">
               <div class="action-btns btn-tbl-action">
                 <button type="button" id="btnViewRenderEngine" title="View Render Rengine" (click)="navigateToViewRenderEngine(re)">
@@ -65,10 +65,10 @@
                 <button type="button" id="btnDeleteRenderEngine" title="Delete Render Engine" (click)="deleteRenderEngine(re)">
                     <span class="fa fa-trash-o"></span>
                 </button>
-                <button type="button" title="Deactivate Render Engine" (click)="DeactivateRenderEngine(re)" *ngIf="re.IsActive">
+                <button type="button" id="btnDeactivateRenderEngine" title="Deactivate Render Engine" (click)="DeactivateRenderEngine(re)" *ngIf="re.IsActive">
                   <span class="fa fa-toggle-on text-success"></span>
                 </button>
-                <button type="button" title="Activate Render Engine" (click)="ActivateRenderEngine(re)" *ngIf="!re.IsActive">
+                <button type="button" id="btnActivateRenderEngine" title="Activate Render Engine" (click)="ActivateRenderEngine(re)" *ngIf="!re.IsActive">
                   <span class="fa fa-toggle-off text-success"></span>
                 </button>
             </div>
@@ -120,5 +120,4 @@
   </div>
   
   <div class="overlay" [ngClass]="!isFilter? 'hide':'show'"></div>
-  
   
