--- a/App/ClientApp/src/app/layout/render-engine/view/view.component.html
+++ b/App/ClientApp/src/app/layout/render-engine/view/view.component.html
@@ -1,16 +1,16 @@
 <div class="main-container">
     <div class="page-title">
-      <span class="xs-title"> Render Engine Details</span>
+      <span class="xs-title"> NIS Engine Details</span>
     </div>
       <div class="card border-0 mb-2 card-shadow">       
         <div class="card-body" id="collapseDetails">
           <div class="row form-group">
             <div class="col-md-6 col-lg-4">
-                <label id="lblRenderEngineName">Render Engine Name</label>
+                <label id="lblRenderEngineName">NIS Engine Name</label>
                 <div>{{renderEngine.RenderEngineName}}</div>
             </div>
             <div class="col-md-6 col-lg-4">
-                <label id="lblRenderEngineUrl">Render Engine URL</label>
+                <label id="lblRenderEngineUrl">NIS Engine URL</label>
                 <div>{{renderEngine.URL}}</div>
               </div>
           </div>
@@ -46,4 +46,3 @@
         </div>
       </div>
   </div>
-  
