--- a/App/ClientApp/src/app/layout/tenants/view/view.component.html
+++ b/App/ClientApp/src/app/layout/tenants/view/view.component.html
@@ -44,7 +44,7 @@
               </div>
               <div class="col-xl-5 col-lg-6 col-md-6 col-sm-6 form-group">
                 <label>Subscription End Date</label>
-                <div>
+                <div *ngIf='tenant.TenantSubscriptions!=undefined'>
                   <span *ngIf='tenant.TenantSubscriptions[0].SubscriptionEndDate=="0001-01-01T00:00:00"'>-</span>
                   <span *ngIf='tenant.TenantSubscriptions[0].SubscriptionEndDate!="0001-01-01T00:00:00"'>{{tenant.TenantSubscriptions[0].SubscriptionEndDate | date:DataFormat}} </span>
                 </div>
